2002-01-23  Masatake YAMATO  <yamato@redhat.com>

	* xstd.h: Use assert instead of FATAL.

	* input-pnm.c (pnm_load_image): Use
	fopen instead of xfopen. Use fclose instead
	of xfclose.

2001-12-24  Martin Weber <martweb@gmx.net>

	* vc++6.0.txt: Removed.
	Message-ID: <3C4C7155.934E0C5D@gmx.net>.

	* autotrace.vcproj: Added exception.[ch].

	* autotrace.dsp: Likewise.

	Message-ID: <3C4C70AF.60741033@gmx.net>.
	
2002-01-23  Masatake YAMATO  <yamato@redhat.com>

	* main.c (USAGE1::dpi): Write about emf.
	Suggested by Stewart C. Russell <stewart@ref.collins.co.uk>.

2002-01-19  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_bitmap_init): XMALLOC->XCALLOC 
	again.
	I had a mistake at a change in
	2002-01-05  Masatake YAMATO  <yamato@redhat.com>.
	What I did is "XMALLOC->XCALLOC" in at_bitmap_new.
	What I should is "XMALLOC->XCALLOC" in at_bitmap_init.
	I do in this time What I should.

2002-01-15  Masatake YAMATO  <yamato@redhat.com>

	* output.[ch]: removed fatal. use exception.

	* main.c (main): Pass a error handler to read
	and write functions.

	* input.h: Included exception.h.

	* input.c (at_input_get_handler_by_suffix): Don't
	cast returned value(magick_load_image).

	* input-*.[ch]: removed fatal. use exception.

	* autotrace.[ch] (at_splines_write): took
	new args, msg_func and msg_data.
	(at_bitmap_read): Likewise.
	(at_input_read_func,at_output_write_func): Likewise.
	
2002-01-14  Masatake YAMATO  <yamato@redhat.com>

	* main.c (exception_handler): Append newline to
	output.

	* output-fig.c (out_fig_splines): Use XMALLOC instead of
	malloc.

2002-01-12  Masatake YAMATO  <yamato@redhat.com>

	* input-bmp.c (ReadImage): Didn't close
	fd here. Instead closing at bmp_load_image.
	
2002-01-05  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (at_bitmap_init): XMALLOC->XCALLOC.
	Found by Martin.
	Bug is doped by me.

	* vector.c (acos_d): Use exception.
	Return 0.0.

	* thin-image.c (thin_image): Fatal if wrong planes.
